2011-03-24 # 2.0

[NEW] Redesigned Operation API.

[NEW] The resolve_view_target() and resolve_view_url() methods injected in the core object.




2011-02-22 # 1.0

[NEW] Multisite support.

[NEW] Automatically select between '.php' and '.html' view files.

[NEW] In the manager, page having a pattern, a location or a view are highlighted using different
colors.

[NEW] Sitemap view.

[NEW] Rendered content of the `page:content` markup is now wrapped in a DIV element which id is
"content-<content_id>" and class is "editor-<normalized_editor_name>".

[NEW] Rendered views are wrapped in a DIV element which id is "view-<normalized_view_id>" and class
is "view <normalized_constructor> <nomalized_type>".

[NEW] The `css_class` property is made of "page-id-<page_nid> page-slug-<page_slug>" +
(if the page is the home page) "home" + (if the page displays a node)
"node-id-<node_nid> node-slug-<node_slug>" + (if the user is authenticated) "is_authenticated".

[NEW] Template can now be changed and updated within the editor dynamically.

[NEW] A record page cannot be deleted it has children or is a location target.

[NEW] The `scope` property can be used in the view definition to provide a I18n scope while
rendering templates. If the property is not defined, the flat module id of the view is used
instead. 

[CHG] Renamed the `contentsid` and `contents` property of the "contents" active record as
`contentid` and `content`. Renamed the `page:contents` markup as `page:content`.

[CHG] Enhanced the process of rendering page content so that when exceptions are thrown, they can
be used as rendered content.

[FIX] The scope of the view_WdEditor::render() function can be compromised by PHP templates.




2010-09-28 # 0.11

[NEW] Using the new features of the FObject class, the 'site.pages' module add the `url` and
`absolute_url` getters as well as the `url()` and `absolute_url()` methods to nodes.

[NEW] The `page:languages` offers an alternative to the `page:translation` markup.
